--- a/.travis.yml
+++ b/.travis.yml
@@ -9,15 +9,17 @@ os:
 
 compiler:
   - gcc
-  - clang
+#  - clang
 
 cache:
   ccache: true
 
 addons:
   apt:
-    sources: [ ubuntu-toolchain-r-test, llvm-toolchain-trusty ]
-    packages: [ gcc-7, g++-7, ninja-build, clang ]
+#    sources: [ ubuntu-toolchain-r-test, llvm-toolchain-trusty ]
+#    packages: [ gcc-7, g++-7, ninja-build, clang ]
+    sources: [ ubuntu-toolchain-r-test ]
+    packages: [ gcc-8, g++-8, ninja-build ]
   homebrew:
     packages:
     - ninja
@@ -26,13 +28,15 @@ addons:
 matrix:
     include:
         - os: linux
-          env: MATRIX_EVAL="export CC=clang-8 CXX=clang++-8 LINUX_ODBC_LIB=libiodbc2-dev OSX_ODBC_LIB=libiodbc"
+#          env: MATRIX_EVAL="export CC=clang-8 CXX=clang++-8 LINUX_ODBC_LIB=libiodbc2-dev"
+          env: MATRIX_EVAL="export CC=clang CXX=clang++ LINUX_ODBC_LIB=libiodbc2-dev"
         - os: linux
-          env: MATRIX_EVAL="export CC=gcc-7   CXX=g++-7     LINUX_ODBC_LIB=libiodbc2-dev OSX_ODBC_LIB=libiodbc"
+          env: MATRIX_EVAL="export CC=gcc-7   CXX=g++-7     LINUX_ODBC_LIB=libiodbc2-dev"
         - os: linux
-          env: MATRIX_EVAL="export CC=clang-8 CXX=clang++-8 LINUX_ODBC_LIB=unixodbc-dev OSX_ODBC_LIB=unixodbc"
+#          env: MATRIX_EVAL="export CC=clang-8 CXX=clang++-8 LINUX_ODBC_LIB=unixodbc-dev"
+          env: MATRIX_EVAL="export CC=clang CXX=clang++ LINUX_ODBC_LIB=unixodbc-dev"
         - os: linux
-          env: MATRIX_EVAL="export CC=gcc-7   CXX=g++-7     LINUX_ODBC_LIB=unixodbc-dev OSX_ODBC_LIB=unixodbc"
+          env: MATRIX_EVAL="export CC=gcc-7   CXX=g++-7     LINUX_ODBC_LIB=unixodbc-dev"
         - os: osx
           env: MATRIX_EVAL="export OSX_ODBC_LIB=libiodbc"
         - os: osx
@@ -40,8 +44,10 @@ matrix:
     exclude:
         - os: linux
           compiler: gcc
-        - os: osx
-          compiler: gcc
+#        - os: linux
+#          compiler: clang
+#        - os: osx
+#          compiler: gcc
 
 
 install:
