--- a/.travis.yml
+++ b/.travis.yml
@@ -46,8 +46,8 @@ matrix:
           compiler: gcc
 #        - os: linux
 #          compiler: clang
-#        - os: osx
-#          compiler: gcc
+        - os: osx
+          compiler: gcc
 
 
 install:
