--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ addons:
 #    sources: [ ubuntu-toolchain-r-test, llvm-toolchain-trusty ]
 #    packages: [ gcc-7, g++-7, ninja-build, clang ]
     sources: [ ubuntu-toolchain-r-test ]
-    packages: [ gcc-8, g++-8, ninja-build ]
+    packages: [ gcc-8, g++-8, ninja-build, libssl-dev, binutils, libpoco-dev ]
   homebrew:
     packages:
     - ninja
@@ -28,21 +28,41 @@ addons:
 matrix:
     include:
         - os: linux
-#          env: MATRIX_EVAL="export CC=clang-8 CXX=clang++-8 LINUX_ODBC_LIB=libiodbc2-dev"
-          env: MATRIX_EVAL="export CC=clang CXX=clang++ LINUX_ODBC_LIB=libiodbc2-dev"
+#          env: MATRIX_EVAL="export CC=clang-8 CXX=clang++-8 ODBC_LIB=libiodbc2-dev"
+          env: MATRIX_EVAL="export CC=clang CXX=clang++ ODBC_LIB=libiodbc2-dev"
+          addons:
+            apt:
+              packages:
+              - libiodbc2-dev
         - os: linux
-          env: MATRIX_EVAL="export CC=gcc-8   CXX=g++-8     LINUX_ODBC_LIB=libiodbc2-dev"
+          env: MATRIX_EVAL="export CC=gcc-8   CXX=g++-8     ODBC_LIB=libiodbc2-dev"
+          addons:
+            apt:
+              packages:
+              - libiodbc2-dev
         - os: linux
-#          env: MATRIX_EVAL="export CC=clang-8 CXX=clang++-8 LINUX_ODBC_LIB=unixodbc-dev"
-          env: MATRIX_EVAL="export CC=clang CXX=clang++ LINUX_ODBC_LIB=unixodbc-dev"
+#          env: MATRIX_EVAL="export CC=clang-8 CXX=clang++-8 ODBC_LIB=unixodbc-dev"
+          env: MATRIX_EVAL="export CC=clang CXX=clang++ ODBC_LIB=unixodbc-dev"
         - os: linux
-          env: MATRIX_EVAL="export CC=gcc-8   CXX=g++-8     LINUX_ODBC_LIB=unixodbc-dev"
+          env: MATRIX_EVAL="export CC=gcc-8   CXX=g++-8     ODBC_LIB=unixodbc-dev"
         - os: linux
-          env: MATRIX_EVAL="export CC=clang CXX=clang++ LINUX_ODBC_LIB=libiodbc2-dev CMAKE_FLAGS=-DUNBUNDLED=1"
+          env: MATRIX_EVAL="export CC=clang CXX=clang++ ODBC_LIB=libiodbc2-dev CMAKE_FLAGS=-DUNBUNDLED=1"
+          addons:
+            apt:
+              packages:
+              - libiodbc2-dev
         - os: osx
-          env: MATRIX_EVAL="export OSX_ODBC_LIB=libiodbc"
+          env: MATRIX_EVAL="export ODBC_LIB=libiodbc"
+          addons:
+            homebrew:
+              packages:
+              - libiodbc
         - os: osx
-          env: MATRIX_EVAL="export OSX_ODBC_LIB=unixodbc"
+          env: MATRIX_EVAL="export ODBC_LIB=unixodbc"
+          addons:
+            homebrew:
+              packages:
+              - unixodbc
     exclude:
         - os: linux
           compiler: gcc
@@ -54,10 +74,10 @@ matrix:
 
 install:
   - eval "${MATRIX_EVAL}"
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu artful main universe"; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then  sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1); fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then  sudo apt-get install -y $LINUX_ODBC_LIB libssl-dev binutils libpoco-dev | tee build.log 2>&1 || (cat build.log && exit 1); fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install $OSX_ODBC_LIB; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$ODBC_LIB"=="unixodbc-dev" ]; then sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu artful main universe"; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$ODBC_LIB"=="unixodbc-dev" ]; then  sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1); fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ] && [ "$ODBC_LIB"=="unixodbc-dev" ]; then  sudo apt-get install -y $ODBC_LIB | tee build.log 2>&1 || (cat build.log && exit 1); fi
+#  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then brew install $ODBC_LIB; fi
 
 script:
   - mkdir -p build
