--- a/.travis.yml
+++ b/.travis.yml
@@ -33,29 +33,47 @@ matrix:
           addons:
             apt:
               packages: [ ninja-build, libiodbc2-dev, libiodbc2 ]
+
         - os: linux
           env: MATRIX_EVAL="export CC=gcc-8 CXX=g++-8"
           addons:
             apt:
               sources: [ ubuntu-toolchain-r-test ]
               packages: [ ninja-build, gcc-8, g++-8, libiodbc2-dev, libiodbc2 ]
+
         - os: linux
 #          env: MATRIX_EVAL="export CC=clang-8 CXX=clang++-8 ODBC_LIB=unixodbc-dev"
           env: MATRIX_EVAL="export CC=clang CXX=clang++ ODBC_LIB=unixodbc-dev"
+
         - os: linux
           env: MATRIX_EVAL="export CC=gcc-8   CXX=g++-8     ODBC_LIB=unixodbc-dev"
-#TODO test unbunled:
-#        - os: linux
-#          env: MATRIX_EVAL="export CC=clang CXX=clang++ ODBC_LIB=libiodbc2-dev CMAKE_FLAGS=-DUNBUNDLED=1"
-#          addons:
-#            apt:
-#              packages:
-#              - libiodbc2-dev
-#              - libiodbc2
+          addons:
+            apt:
+              sources: [ ubuntu-toolchain-r-test ]
+              packages: [ ninja-build, gcc-8, g++-8 ]
+
+# TODO test unbunled:
+        - os: linux
+          env: MATRIX_EVAL="export CC=clang CXX=clang++ ODBC_LIB=libiodbc2-dev CMAKE_FLAGS=-DUNBUNDLED=1"
+          addons:
+            apt:
+              packages: [ ninja-build, libiodbc2-dev, libiodbc2, libssl-dev, libpoco-dev ]
+          git:
+            submodules: false
+
         - os: osx
           addons:
             homebrew:
               packages: [ ninja, libiodbc ]
+
+        - os: osx
+          env: MATRIX_EVAL="export CMAKE_FLAGS=-DUNBUNDLED=1"
+          git:
+            submodules: false
+          addons:
+            homebrew:
+              packages: [ ninja, libiodbc, poco ]
+
         - os: osx
           addons:
             homebrew:
