--- a/.travis.yml
+++ b/.travis.yml
@@ -32,13 +32,14 @@ matrix:
           env: MATRIX_EVAL="export CC=clang CXX=clang++"
           addons:
             apt:
+              #sources: [ ubuntu-toolchain-r-test ]
               packages: [ ninja-build, libstdc++-8-dev, libiodbc2-dev, libiodbc2 ]
 
         - os: linux
           env: MATRIX_EVAL="export CC=gcc-8 CXX=g++-8"
           addons:
             apt:
-              sources: [ ubuntu-toolchain-r-test ]
+              #sources: [ ubuntu-toolchain-r-test ]
               packages: [ ninja-build, gcc-8, g++-8, libiodbc2-dev, libiodbc2 ]
 
         - os: linux
@@ -49,7 +50,7 @@ matrix:
           env: MATRIX_EVAL="export CC=gcc-8   CXX=g++-8     ODBC_LIB=unixodbc-dev"
           addons:
             apt:
-              sources: [ ubuntu-toolchain-r-test ]
+              #sources: [ ubuntu-toolchain-r-test ]
               packages: [ ninja-build, gcc-8, g++-8 ]
 
 # TODO test unbunled:
