--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,11 @@ matrix:
               packages: [ ninja-build, gcc-8, g++-8, libiodbc2-dev, libiodbc2 ]
 
         - os: linux
-          env: MATRIX_EVAL="export CC=clang CXX=clang++ ODBC_LIB=unixodbc-dev"
+          addons:
+            apt:
+              sources: [ ubuntu-toolchain-r-test, llvm-toolchain-trusty ]
+              packages: [ ninja-build, libstdc++-8-dev, clang-7, clang++-7 ]
+          env: MATRIX_EVAL="export CC=clang-7 CXX=clang++-7 ODBC_LIB=unixodbc-dev"
 
         - os: linux
           env: MATRIX_EVAL="export CC=gcc-7 CXX=g++-7 ODBC_LIB=unixodbc-dev"
