--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,8 @@ matrix:
           addons:
             apt:
               sources: [ ubuntu-toolchain-r-test, llvm-toolchain-trusty ]
-              packages: [ ninja-build, libstdc++-8-dev, clang-7 ]
-          env: MATRIX_EVAL="export CC=clang-7 CXX=clang++-7 ODBC_LIB=unixodbc-dev"
+              packages: [ ninja-build, libstdc++-8-dev, clang ]
+          env: MATRIX_EVAL="export CC=clang-8 CXX=clang++-8 ODBC_LIB=unixodbc-dev"
 
         - os: linux
           env: MATRIX_EVAL="export CC=gcc-7 CXX=g++-7 ODBC_LIB=unixodbc-dev"
