--- a/.travis.yml
+++ b/.travis.yml
@@ -18,18 +18,18 @@ addons:
 
 matrix:
     include:
-        # two fastest builds first:
+        # fastest builds first:
 
-        # clang5 iodbc unbundled
-        - os: linux
-          compiler: clang
-          env: MATRIX_EVAL="export CC=clang CXX=clang++ CMAKE_FLAGS=-DUNBUNDLED=1"
-          addons:
-            apt:
-              sources: [ ubuntu-toolchain-r-test ]
-              packages: [ ninja-build, libstdc++-8-dev, libiodbc2-dev, libiodbc2, libpoco-dev ]
-          git:
-            submodules: false
+        # clang5 iodbc unbundled  Too old poco 1.3
+        #- os: linux
+        #  compiler: clang
+        #  env: MATRIX_EVAL="export CC=clang CXX=clang++ CMAKE_FLAGS=-DUNBUNDLED=1"
+        #  addons:
+        #    apt:
+        #      sources: [ ubuntu-toolchain-r-test ]
+        #      packages: [ ninja-build, libstdc++-8-dev, libiodbc2-dev, libiodbc2, libpoco-dev ]
+        #  git:
+        #    submodules: false
 
         # osx libiodbc unbundled
         - os: osx
@@ -39,6 +39,7 @@ matrix:
           addons:
             homebrew:
               packages: [ ninja, libiodbc, poco ]
+
 
         # clang5 iodbc
         - os: linux
