--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: cpp
 
-sudo: required
-dist: trusty
-
 os:
   - linux
   - osx
@@ -21,8 +18,32 @@ addons:
 
 matrix:
     include:
+        # fastest builds first:
+
+        # clang5 iodbc unbundled  Too old poco 1.3
+        #- os: linux
+        #  compiler: clang
+        #  env: MATRIX_EVAL="export CC=clang CXX=clang++ CMAKE_FLAGS=-DUNBUNDLED=1"
+        #  addons:
+        #    apt:
+        #      sources: [ ubuntu-toolchain-r-test ]
+        #      packages: [ ninja-build, libstdc++-8-dev, libiodbc2-dev, libiodbc2, libpoco-dev ]
+        #  git:
+        #    submodules: false
+
+        # osx libiodbc unbundled
+        - os: osx
+          env: MATRIX_EVAL="export CMAKE_FLAGS=-DUNBUNDLED=1"
+          git:
+            submodules: false
+          addons:
+            homebrew:
+              packages: [ ninja, libiodbc, poco ]
+
+
         # clang5 iodbc
         - os: linux
+          compiler: clang
           env: MATRIX_EVAL="export CC=clang CXX=clang++"
           addons:
             apt:
@@ -47,6 +68,7 @@ matrix:
 
         # clang5 unixodbc
         - os: linux
+          compiler: clang
           addons:
             apt:
               sources: [ ubuntu-toolchain-r-test ]
@@ -61,15 +83,6 @@ matrix:
               sources: [ ubuntu-toolchain-r-test ]
               packages: [ ninja-build, gcc-7, g++-7 ]
 
-# TODO test unbunled:
-#        - os: linux
-#          env: MATRIX_EVAL="export CC=clang CXX=clang++ ODBC_LIB=libiodbc2-dev CMAKE_FLAGS=-DUNBUNDLED=1"
-#          addons:
-#            apt:
-#              packages: [ ninja-build, libiodbc2-dev, libiodbc2, libssl-dev, libpoco-dev ]
-#          git:
-#            submodules: false
-
         - os: osx
           addons:
             homebrew:
@@ -80,14 +93,6 @@ matrix:
             homebrew:
               packages: [ ninja, unixodbc ]
 
-# TODO test unbunled:
-#        - os: osx
-#          env: MATRIX_EVAL="export CMAKE_FLAGS=-DUNBUNDLED=1"
-#          git:
-#            submodules: false
-#          addons:
-#            homebrew:
-#              packages: [ ninja, libiodbc, poco ]
 
     exclude:
         - os: linux
