connection by url

--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -8,6 +8,9 @@ clickhouse_localhost_w = Clickhousew
 [clickhouse_localhost]
 driver = Clickhouse
 description = Clickhouse driver
+# New all-in one way to specify connection with [optional] settings:
+#url = https://default@localhost:8443/query?database=default&max_result_bytes=4000000&buffer_size=3000000
+# Old way:
 #server = localhost
 #database = default
 #uid = default
