--- a/driver/win/resource.rc
+++ b/driver/win/resource.rc
@@ -60,6 +60,8 @@ BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,252,224,50,14
     LTEXT           "Name",IDC_STATIC,18,27,44,8
     EDITTEXT        IDC_DSN_NAME,77,26,96,14,ES_AUTOHSCROLL
+    // LTEXT           "Url",IDC_STATIC,18,71,16,8
+    // EDITTEXT        IDC_URL,77,70,97,14,ES_AUTOHSCROLL
     LTEXT           "Host",IDC_STATIC,18,71,16,8
     EDITTEXT        IDC_SERVER_HOST,77,70,97,14,ES_AUTOHSCROLL
     LTEXT           "Port",IDC_STATIC,18,91,14,8
