--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -9,7 +9,9 @@ clickhouse_localhost_w = Clickhousew
 driver = Clickhouse
 description = Clickhouse driver
 # New all-in one way to specify connection with [optional] settings:
-#url = https://default@localhost:8443/query?database=default&max_result_bytes=4000000&buffer_size=3000000
+#url = https://default:password@localhost:8443/query?database=default&max_result_bytes=4000000&buffer_size=3000000
+# Minimal (will connect to port 8443 if https:// or 8123 if http:// ):
+#url = https://localhost
 # Old way:
 #server = localhost
 #database = default
