--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -21,6 +21,9 @@ description = Clickhouse driver
 # Use https with 8443 port:
 #sslmode = require
 
+#trace=1
+#tracefile=/tmp/chlickhouse-odbc.log
+
 # Unicode
 [clickhouse_localhost_w]
 driver = Clickhousew
