Print time to log

--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -2,7 +2,7 @@
 
 [ODBC Data Sources]
 clickhouse_localhost = Clickhouse
-clickhouse_localhost_w = Clickhousew
+clickhouse_localhost_w = Clickhouse_w
 
 # Ansi
 [clickhouse_localhost]
@@ -26,4 +26,4 @@ description = Clickhouse driver
 
 # Unicode
 [clickhouse_localhost_w]
-driver = Clickhousew
+driver = Clickhouse_w
