Better debug log (#146)

--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -2,7 +2,7 @@
 
 [ODBC Data Sources]
 clickhouse_localhost = Clickhouse
-clickhouse_localhost_w = Clickhousew
+clickhouse_localhost_w = Clickhouse_w
 
 # Ansi
 [clickhouse_localhost]
@@ -21,6 +21,9 @@ description = Clickhouse driver
 # Use https with 8443 port:
 #sslmode = require
 
+#trace=1
+#tracefile=/tmp/chlickhouse-odbc.log
+
 # Unicode
 [clickhouse_localhost_w]
-driver = Clickhousew
+driver = Clickhouse_w
