--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -1,3 +1,5 @@
+find_package (Threads)
+
 add_subdirectory(log)
 add_subdirectory(escaping)
 if (WIN32)
@@ -76,25 +78,26 @@ if (NOT WIN32)
     target_include_directories (${libname} PRIVATE ${ODBC_INCLUDE_DIRECTORIES})
 endif()
 
-target_link_libraries(${libname} clickhouse-odbc-escaping clickhouse-odbc-log)
+target_link_libraries(${libname} PRIVATE clickhouse-odbc-escaping clickhouse-odbc-log)
 
 if(USE_SSL)
-    target_link_libraries(${libname} ${Poco_NetSSL_LIBRARY} ${Poco_Crypto_LIBRARY} ${Poco_Util_LIBRARY})
+    target_link_libraries(${libname} PRIVATE ${Poco_NetSSL_LIBRARY} ${Poco_Crypto_LIBRARY} ${Poco_Util_LIBRARY})
     target_include_directories (${libname} PRIVATE ${OPENSSL_INCLUDE_DIR})
 endif()
 
-target_link_libraries(${libname}
+target_link_libraries(${libname} PRIVATE
     ${Poco_Net_LIBRARY}
     ${Poco_Foundation_LIBRARY}
     ${ODBC_LIBRARIES}
+    Threads::Threads
 )
 
 if(NOT APPLE AND NOT WIN32)
-    target_link_libraries(${libname} "-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/linker_script")
+    target_link_libraries(${libname} PRIVATE "-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/linker_script")
 endif()
 
 if (WIN32)
-  target_link_libraries(${libname} clickhouse-odbc-win ws2_32 Iphlpapi legacy_stdio_definitions)
+  target_link_libraries(${libname} PRIVATE clickhouse-odbc-win ws2_32 Iphlpapi legacy_stdio_definitions)
 endif()
 
 if (NOT WIN32)
