--- a/driver/config_cmake.h.in
+++ b/driver/config_cmake.h.in
@@ -12,6 +12,7 @@
 #cmakedefine01 ODBC_WCHAR
 #cmakedefine01 ODBC_IODBC
 #cmakedefine01 ODBC_UNIXODBC
+#cmakedefine01 SQL_WCHART_CONVERT
 
 #cmakedefine ODBC_LIBRARIES "@ODBC_LIBRARIES@"
 #cmakedefine ODBC_INCLUDE_DIRECTORIES "@ODBC_INCLUDE_DIRECTORIES@"
