Add new options desc

--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -12,14 +12,19 @@ description = Clickhouse driver
 #url = https://default:password@localhost:8443/query?database=default&max_result_bytes=4000000&buffer_size=3000000
 # Minimal (will connect to port 8443 if https:// or 8123 if http:// ):
 #url = https://localhost
+
 # Old way:
 #server = localhost
 #database = default
 #uid = default
 #port = 8123
 #proto = http
-# Use https with 8443 port:
+
+# sslmode variants: allow - ignore self-signed and bad certificates; require - check certificates (and fail connection if something wrong)
 #sslmode = require
+#privatekeyfile =
+#certificatefile =
+#calocation =
 
 #trace=1
 #tracefile=/tmp/chlickhouse-odbc.log
