--- a/vs/driver32w/driver32w.vcxproj
+++ b/vs/driver32w/driver32w.vcxproj
@@ -183,7 +183,7 @@
     <ClCompile Include="..\..\driver\handles.cpp" />
     <ClCompile Include="..\..\driver\info.cpp" />
     <ClCompile Include="..\..\driver\odbc.cpp" />
-    <ClCompile Include="..\..\driver\log.cpp" />
+    <ClCompile Include="..\..\driver\log\log.cpp" />
     <ClCompile Include="..\..\driver\result_set.cpp" />
     <ClCompile Include="..\..\driver\read_helpers.cpp" />
     <ClCompile Include="..\..\driver\statement.cpp" />
