--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,15 +1,39 @@
-if (NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" AND APPLE))
+if(NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" AND APPLE))
+    find_program(ISQL isql)
+    find_program(IODBCTEST iodbctest)
+    find_program(IODBCTESTW iodbctestw)
+
+    set(ISQL_USER default CACHE STRING "")
+    set(ISQL_PASS "" CACHE STRING "")
     if (TEST_DSN)
         add_test(NAME "test.sh" COMMAND env DSN=${TEST_DSN} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
         add_test(NAME "test.pl" COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN})
         add_test(NAME "test.py" COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN})
-    endif ()
+        if(ISQL)
+            add_test(NAME "isql-default" COMMAND sh -c "echo select 1+1 | ${ISQL} ${TEST_DSN} ${ISQL_USER} ${ISQL_PASS}")
+        endif()
+        if(IODBCTEST)
+            add_test(NAME "iodbctest-default" COMMAND sh -c "echo select 1+1 | ${IODBCTEST} DSN=${TEST_DSN};UID=${ISQL_USER};PWD=${ISQL_PASS}")
+        endif()
+        if(IODBCTESTW)
+            add_test(NAME "iodbctestw-default" COMMAND sh -c "echo select 1+1 | ${IODBCTESTW} DSN=${TEST_DSN};UID=${ISQL_USER};PWD=${ISQL_PASS}")
+        endif()
+    endif()
     if (TEST_DSN_W)
         add_test(NAME "test.sh-w" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
         add_test(NAME "test.pl-w" COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN_W})
         add_test(NAME "test.py-w" COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN_W})
-    endif ()
+        if(ISQL)
+            add_test(NAME "isql-default-w" COMMAND sh -c "echo select 1+1 | ${ISQL} ${TEST_DSN_W} ${ISQL_USER} ${ISQL_PASS}")
+        endif()
+        if(IODBCTEST)
+            add_test(NAME "iodbctest-default-w" COMMAND sh -c "echo select 1+1 | ${IODBCTEST} DSN=${TEST_DSN_W};UID=${ISQL_USER};PWD=${ISQL_PASS}")
+        endif()
+        if(IODBCTESTW)
+            add_test(NAME "iodbctestw-default-w" COMMAND sh -c "echo select 1+1 | ${IODBCTESTW} DSN=${TEST_DSN_W};UID=${ISQL_USER};PWD=${ISQL_PASS}")
+        endif()
+    endif()
     if(COMMAND sqlcmd) # MS SQL server need change server in file:
         add_test(NAME "sqlcmd" COMMAND sqlcmd -i ${CMAKE_CURRENT_SOURCE_DIR}/mssql.linked.server.sql)
-    endif ()
-endif ()
+    endif()
+endif()
