--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,20 +3,22 @@ if(NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" AND APPLE))
     find_program(IODBCTEST iodbctest)
     find_program(IODBCTESTW iodbctestw)
 
-    set(ISQL_USER default CACHE STRING "")
-    set(ISQL_PASS "" CACHE STRING "")
+    set(SQL_USER default CACHE STRING "")
+    set(SQL_PASS "" CACHE STRING "")
+    set(SQL_QUERY "123456+456789" CACHE STRING "")
+    set(SQL_ANSWER "580245" CACHE STRING "")
     if (TEST_DSN)
         add_test(NAME "test.sh" COMMAND env DSN=${TEST_DSN} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
         add_test(NAME "test.pl" COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN})
         add_test(NAME "test.py" COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN})
         if(ISQL)
-            add_test(NAME "isql-default" COMMAND sh -c "echo select 1+1 | ${ISQL} ${TEST_DSN} ${ISQL_USER} ${ISQL_PASS}")
+            add_test(NAME "isql-default" COMMAND sh -c "echo select ${SQL_QUERY} | ${ISQL} ${TEST_DSN} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
         endif()
         if(IODBCTEST)
-            add_test(NAME "iodbctest-default" COMMAND sh -c "echo select 1+1 | ${IODBCTEST} DSN=${TEST_DSN};UID=${ISQL_USER};PWD=${ISQL_PASS}")
+            add_test(NAME "iodbctest-default" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTEST} \"DSN=${TEST_DSN};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
         endif()
         if(IODBCTESTW)
-            add_test(NAME "iodbctestw-default" COMMAND sh -c "echo select 1+1 | ${IODBCTESTW} DSN=${TEST_DSN};UID=${ISQL_USER};PWD=${ISQL_PASS}")
+            add_test(NAME "iodbctestw-default" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTESTW} \"DSN=${TEST_DSN};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
         endif()
     endif()
     if (TEST_DSN_W)
@@ -24,13 +26,13 @@ if(NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" AND APPLE))
         add_test(NAME "test.pl-w" COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN_W})
         add_test(NAME "test.py-w" COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN_W})
         if(ISQL)
-            add_test(NAME "isql-default-w" COMMAND sh -c "echo select 1+1 | ${ISQL} ${TEST_DSN_W} ${ISQL_USER} ${ISQL_PASS}")
+            add_test(NAME "isql-default-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ISQL} ${TEST_DSN_W} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
         endif()
         if(IODBCTEST)
-            add_test(NAME "iodbctest-default-w" COMMAND sh -c "echo select 1+1 | ${IODBCTEST} DSN=${TEST_DSN_W};UID=${ISQL_USER};PWD=${ISQL_PASS}")
+            add_test(NAME "iodbctest-default-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTEST} \"DSN=${TEST_DSN_W};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
         endif()
         if(IODBCTESTW)
-            add_test(NAME "iodbctestw-default-w" COMMAND sh -c "echo select 1+1 | ${IODBCTESTW} DSN=${TEST_DSN_W};UID=${ISQL_USER};PWD=${ISQL_PASS}")
+            add_test(NAME "iodbctestw-default-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTESTW} \"DSN=${TEST_DSN_W};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
         endif()
     endif()
     if(COMMAND sqlcmd) # MS SQL server need change server in file:
