--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-if(NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" AND APPLE))
+if(NOT (APPLE)) # CMAKE_BUILD_TYPE_UC STREQUAL "TSAN"
     find_program(ISQL isql)
     find_program(IODBCTEST iodbctest)
     find_program(IODBCTESTW iodbctestw)
@@ -13,13 +13,13 @@ if(NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" AND APPLE))
         add_test(NAME "test.sh" COMMAND env DSN=${TEST_DSN} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
         add_test(NAME "test.pl" COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN})
         add_test(NAME "test.py" COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN})
-        if(ISQL)
+        if(ODBC_UNIXODBC AND ISQL)
             add_test(NAME "isql-default" COMMAND sh -c "echo select ${SQL_QUERY} | ${ISQL} ${TEST_DSN} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
         endif()
-        if(IODBCTEST)
+        if(ODBC_IODBC AND IODBCTEST)
             add_test(NAME "iodbctest-${SQL_USER}" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTEST} \"DSN=${TEST_DSN};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
         endif()
-        if(IODBCTESTW)
+        if(ODBC_IODBC AND IODBCTESTW)
             add_test(NAME "iodbctestw-${SQL_USER}" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTESTW} \"DSN=${TEST_DSN};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
         endif()
     endif()
@@ -27,13 +27,13 @@ if(NOT (CMAKE_BUILD_TYPE_UC STREQUAL "TSAN" AND APPLE))
         add_test(NAME "test.sh-w" COMMAND env DSN=${TEST_DSN_W} ${CMAKE_CURRENT_SOURCE_DIR}/test.sh)
         add_test(NAME "test.pl-w" COMMAND perl ${CMAKE_CURRENT_SOURCE_DIR}/test.pl ${TEST_DSN_W})
         add_test(NAME "test.py-w" COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/test.py ${TEST_DSN_W})
-        if(ISQL)
+        if(ODBC_UNIXODBC AND ISQL)
             add_test(NAME "isql-${SQL_USER}-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${ISQL} ${TEST_DSN_W} ${SQL_USER} ${SQL_PASS} | grep ${SQL_ANSWER}")
         endif()
-        if(IODBCTEST)
+        if(ODBC_IODBC AND IODBCTEST)
             add_test(NAME "iodbctest-${SQL_USER}-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTEST} \"DSN=${TEST_DSN_W};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
         endif()
-        if(IODBCTESTW)
+        if(ODBC_IODBC AND IODBCTESTW)
             add_test(NAME "iodbctestw-${SQL_USER}-w" COMMAND sh -c "echo select ${SQL_QUERY} | ${IODBCTESTW} \"DSN=${TEST_DSN_W};UID=${SQL_USER};PWD=${SQL_PASS}\" | grep ${SQL_ANSWER}")
         endif()
     endif()
