--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -64,6 +64,9 @@ if (UNICODE)
     if (SQL_WCHART_CONVERT)
         target_compile_definitions(${libname} PUBLIC -DSQL_WCHART_CONVERT=1)
     endif ()
+    #if(ODBC_IODBC)
+    #    target_compile_definitions(${libname} PUBLIC -DSQL_NOUNICODEMAP=1)
+    #endif()
 endif ()
 
 target_compile_definitions (${libname} PRIVATE "-DCMAKE_BUILD=1")
