--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -15,6 +15,10 @@ if (UNICODE)
     if (ODBC_UNIXODBC)
         option (SQL_WCHART_CONVERT "Unixodbc SQL_WCHART_CONVERT (use four bytes TCHAR)" 0)
     endif ()
+    if(ODBC_IODBC)
+        option (ODBC_CHAR16 "Strange option for iodbc" 1)
+    endif()
+
     set(_config_add w)
 else ()
     set(UNICODE 0)
